--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <artifactId>helidon</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <!-- hehe -->
     <dependencies>
         <dependency>
             <groupId>io.helidon.webserver</groupId>
